<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.detail_info.DetailInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/text_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/product_information"
                android:textSize="24sp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_product_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background"
                app:shapeAppearanceOverlay="@style/rounded_corners" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_category"
                    style="@style/product_text_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/category"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_star"
                    app:layout_constraintEnd_toStartOf="@id/tv_rating"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_rating"
                    style="@style/product_text_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/rating"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_title"
                style="@style/product_text_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/tv_description"
                style="@style/product_text_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/description"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_price"
                style="@style/product_text_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="40dp"
                android:text="@string/price"
                android:textAlignment="center"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_share"
                style="@style/text_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/white"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:cornerRadius="16dp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>